--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
 	<meta name="description" content="">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
 	<link rel="stylesheet" href="/style.css">
 
 	<div id="emojimind">
@@ -51,6 +50,6 @@
 		</template>
 	</div>
 
-	<script src="https://npmcdn.com/vue/dist/vue.js"></script>
-	<script src="/emojimind.js"></script>
-	<script src="/index.js"></script>
+	<!-- <script src="https://npmcdn.com/vue/dist/vue.js"></script> -->
+	<script src="https://unpkg.com/vue@1.0.28/dist/vue.min.js"></script>
+	<script src="bundle.js"></script>
