--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
 	</div>
 
 	<script src="https://unpkg.com/vue@2/dist/vue.min.js"></script>
-	<script src="bundle.js"></script>
+	<script src="index.js" type="module"></script>
 
 	<script id="__bs_script__">//<![CDATA[
 		document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.17.5'><\/script>".replace("HOST", location.hostname));
