--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+<head>
 	<title>Emojimind</title>
 	<meta name="description" content="">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="/style.css">
-
+</head>
+<body>
 	<div id="emojimind">
 		<header>
 			<template v-if="!code.length">
@@ -68,6 +70,5 @@
 	<script src="https://unpkg.com/vue@2/dist/vue.min.js"></script>
 	<script src="index.js" type="module"></script>
 
-	<script id="__bs_script__">//<![CDATA[
-		document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.17.5'><\/script>".replace("HOST", location.hostname));
-	//]]></script>
+</body>
+</html>
