Really remove debug

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,8 @@
 				<p>
 					{{symbols.length}} symbols. 
 					{{codeLength}} characters. 
+					{{maxGuesses}} guesses. 
 					{{totalPossibilities}} posibilities.
-					Only {{maxGuesses}} guesses. 
 				</p>
 			</template>
 			<template v-else>
